# Oniris

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindASSIMP.cmake  FindIRRKLANG.cmake
include/glad/: glad.h
lib/: assimp-vc142-mtd.exp
res/img/skybox/: desktop.ini
res/models/: Balancoire.mtl  CBoxPortal.mtl  Crate.mtl  Fence.mtl  Gate.mtl  House.mtl  Labo.mtl  PortailTestCollision.mtl  Portal.mtl  PortalPlan.mtl  Stonehenge.mtl  StreetLight.mtl  streetLightSmall.mtl
res/models/IO_objects/: IODoor.mtl  IOGenerator.mtl
res/models/cube/: cube.mtl
res/models/houses/: House.mtl  houses.mtl
res/models/key/: key.mtl
res/models/map/: map.mtl
res/models/objects/: bone.mtl  carnet.mtl  coins.mtl  crystal.mtl  key.mtl  map.mtl  panel.mtl  paper.mtl  walkman.mtl  yoyo.mtl
res/models/ocean/: ocean.mtl
res/models/particules/: aaa.mtl  grass.mtl  rock02.mtl
res/models/plan_ui/: plan.mtl
res/models/portail/: portail.mtl
res/models/trees/: Sapin_01.mtl  Sapin_02.mtl
res/scene/: objects.txt  particule_systems.txt  static_meshes.txt
res/shaders/: 3DTex.vert  3DTex_ui.vert  Basic.shader  Grass.frag  GrassTex.shader  Normal3D.shader  Ocean.frag  Ocean.vert  Particule.frag  Particule.vert  Portal.frag  Skybox.frag  Skybox.vert  Terrain.frag  Trees.frag  Trees.vert  cbox.frag  model.frag  model.shader  modelAlpha.frag  tree.frag  ui.frag  ui.vert
src/: Application.cpp  Application.hpp  AudioManager.cpp  AudioManager.hpp  BaseLight.cpp  BaseLight.hpp  BoxCollision.cpp  BoxCollision.hpp  CBoxPortal.hpp  Camera.cpp  Camera.hpp  CollisionBox.cpp  CollisionBox.hpp  CollisionGrid.cpp  CollisionGrid.hpp  CollisionManager.cpp  CollisionManager.hpp  CreateCrystal.hpp  DirectionalLight.cpp  DirectionalLight.hpp  EntityImporter.cpp  EntityImporter.hpp  Fog.cpp  Fog.hpp  FreeflyCamera.hpp  Game.cpp  Game.hpp  Hud.cpp  Hud.hpp  IODoor.hpp  IOLight.hpp  InputHandler.cpp  InputHandler.hpp  Inputs.cpp  Inputs.hpp  InteractiveObject.cpp  InteractiveObject.hpp  InvPanel.hpp  LightManager.cpp  LightManager.hpp  (+46 more)
src/collision/: CollisionBox.cpp  CollisionBox.hpp  CollisionGrid.cpp  CollisionGrid.hpp  CollisionManager.cpp  CollisionManager.hpp
src/engine/: Application.cpp  Application.hpp  AudioManager.cpp  AudioManager.hpp  BaseCamera.hpp  Camera.cpp  Camera.hpp  EntityImporter.cpp  EntityImporter.hpp  Fog.cpp  Fog.hpp  InputHandler.cpp  InputHandler.hpp  Log.hpp  Material.cpp  Material.hpp  Model.cpp  Model.hpp  Ocean.cpp  Ocean.hpp  ParticuleSystem.cpp  ParticuleSystem.hpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  ShapeCube.cpp  ShapeCube.hpp  Skybox.cpp  Skybox.hpp  StaticMesh.cpp  StaticMesh.hpp  Terrain.cpp  Terrain.hpp  Window.cpp  Window.hpp
src/gameplay/: CBoxPortal.hpp  CreateCrystal.hpp  Game.cpp  Game.hpp  IODoor.hpp  IOLight.hpp  InteractiveObject.cpp  InteractiveObject.hpp  NarrativeObject.cpp  NarrativeObject.hpp  Object.cpp  Object.hpp  Portal.cpp  Portal.hpp  UsableObject.cpp  UsableObject.hpp
src/hud/: Hud.cpp  Hud.hpp  InvPanel.hpp  Panel.cpp  Panel.hpp  TargetPanel.hpp
src/lighting/: BaseLight.cpp  BaseLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  LightManager.cpp  LightManager.hpp  PointLight.cpp  PointLight.hpp
src/opengl/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h
